# pre-commit-hooks

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/actions/earliest-python-version/: action.yaml
.github/workflows/: lint.yaml  run-tests.yaml
ci/: build-test.sh  lint.sh
src/: Levenshtein.pyi
src/rapids_pre_commit_hooks/: alpha_spec.py  codeowners.py  coderabbit_gitleaks.py  copyright.py  hardcoded_version.py  lint.py  pr_builder.py  pyproject_license.py  rapids_metadata.py
src/rapids_pre_commit_hooks/shell/: __init__.py  verify_conda_yes.py
src/rapids_pre_commit_hooks/utils/: toml.py  yaml.py
test/: test_hooks.py  test_pre_commit.py
test/examples/verify-alpha-spec/fail/master/: dependencies.yaml
test/examples/verify-alpha-spec/pass/master/: dependencies.yaml
test/examples/verify-codeowners/fail/master/.github/: CODEOWNERS
test/examples/verify-codeowners/pass/master/.github/: CODEOWNERS
test/examples/verify-conda-yes/fail/master/: test.sh
test/examples/verify-conda-yes/pass/master/: test.sh
test/examples/verify-copyright/fail/branch/: test.py
test/examples/verify-copyright/pass/branch/: test.py
test/examples/verify-pr-builder/fail/master/.github/workflows/: pr.yaml
test/examples/verify-pr-builder/pass/master/.github/workflows/: pr.yaml
test/rapids_pre_commit_hooks/: test_alpha_spec.py  test_codeowners.py  test_copyright.py  test_lint.py  test_pr_builder.py  test_pyproject_license.py  test_rapids_metadata.py  test_shell.py
tests/: test_pre_commit.py  test_testing_utils.py
tests/examples/verify-alpha-spec/fail/: metadata.yaml
tests/examples/verify-codeowners/fail/main/.github/: CODEOWNERS
tests/examples/verify-codeowners/pass/: metadata.yaml
tests/examples/verify-conda-yes/fail/main/: test.sh
tests/examples/verify-conda-yes/pass/main/: test.sh
tests/examples/verify-copyright/fail/branch/: test.py
tests/examples/verify-copyright/pass/branch/: test.py
tests/examples/verify-copyright/pass/main/: test.py
tests/examples/verify-hardcoded-version/fail/main/: README.md  test.sh
tests/examples/verify-hardcoded-version/pass/main/: README.md  test.sh
tests/examples/verify-pyproject-license/fail/main/: pyproject.toml
tests/examples/verify-pyproject-license/fail/master/: pyproject.toml
tests/examples/verify-pyproject-license/pass/main/: pyproject.toml
tests/rapids_pre_commit_hooks/: test_alpha_spec.py  test_codeowners.py  test_coderabbit_gitleaks.py  test_copyright.py  test_hardcoded_version.py  test_lint.py  test_pyproject_license.py  test_shell.py
tests/rapids_pre_commit_hooks/utils/: test_toml.py
tests/utils/: rapids_pre_commit_hooks_test_utils.py
