[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rapids-pre-commit-hooks"
version = "0.0.0"
authors = [
    { name = "RAPIDS Development Team", email = "pypi@rapids.ai" }
]
urls = { homepage = "https://github.com/rapidsai/pre-commit-hooks" }
description = "pre-commit hooks for RAPIDS"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools]
packages = { "find" = { where = ["src"] } }

[tool.isort]
profile = "black"
