# Copyright (c) 2023-2024, NVIDIA CORPORATION.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rapids-pre-commit-hooks"
version = "0.0.3"
authors = [
    { name = "RAPIDS Development Team", email = "pypi@rapids.ai" }
]
urls = { homepage = "https://github.com/rapidsai/pre-commit-hooks" }
description = "pre-commit hooks for RAPIDS"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "bashlex",
    "gitpython",
    "packaging",
    "rich",
    "tomlkit",
]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
]

[project.scripts]
verify-conda-yes = "rapids_pre_commit_hooks.shell.verify_conda_yes:main"
verify-copyright = "rapids_pre_commit_hooks.copyright:main"
verify-pyproject-license = "rapids_pre_commit_hooks.pyproject_license:main"
verify-alpha-spec = "rapids_pre_commit_hooks.alpha_spec:main"

[tool.setuptools]
packages = { "find" = { where = ["src"] } }

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "test",
]
